<resources>
    <string name="app_name">Talktopus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_menu_change_name">edit name</string>
    <string name="settings_menu_exit">exit</string>
    <string name="setting_default_username">Viktor Dudka</string>
    <string name="setting_default_status">Online</string>
    <string name="setting_text_account">Account</string>
    <string name="settings_default_number">+79111111111</string>
    <string name="settings_label_phone_number">click to change phone number</string>
    <string name="settings_default_login">ViktorDudka</string>
    <string name="settings_label_login">Username</string>
    <string name="settings_default_bio">About Me</string>
    <string name="settings_label_bio">write a little about yourself</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_title_your_phone">your phone number</string>
    <string name="register_toast_enter_phone">enter phone number</string>
</resources>