<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_user_phote"
            android:layout_width="@dimen/setting_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/defolt_ava"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        
        <TextView
            android:id="@+id/setting_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_default_username"
            android:textSize="@dimen/normalText"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/setting_user_phote"
            app:layout_constraintStart_toEndOf="@id/setting_user_phote"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_default_status"
            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_username"
            app:layout_constraintStart_toEndOf="@id/setting_user_phote"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_text_account"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="@dimen/smallText"
        app:layout_constraintTop_toBottomOf="@id/setting_header_bloc"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_phone_number"
            android:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settings_btn_change_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
    style="@style/settingsButtons">
    <TextView
        android:id="@+id/settings_login"
        android:text="@string/settings_default_login"
        app:layout_constraintTop_toTopOf="@+id/settings_btn_change_login"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/normalText" />
    <TextView
        android:id="@+id/settings_label_login"
        android:text="@string/settings_label_login"
        app:layout_constraintTop_toBottomOf="@+id/settings_login"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/smallText" />
    <View
        app:layout_constraintTop_toBottomOf="@id/settings_label_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/separator" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_bio"
            android:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@+id/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_change_photo"
        android:layout_width="@dimen/setting_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/ic_edit_photo"
        app:layout_constraintBottom_toBottomOf="@id/setting_header_bloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border_color="@color/colorGrey"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/setting_header_bloc" />




</androidx.constraintlayout.widget.ConstraintLayout>